Added field clientname
Added flied clientname to add a footer to local sended mails (like
dovecot sieve replies)

--- a/footermilter.ini
+++ b/footermilter.ini
@@ -97,6 +97,7 @@ enabled = true
 
 # Email "mail from:" for generating the footer.
 from = @example.com
+clientname = localhost
 
 # Footer for text/plain.
 text = -- \
